src/assets/css/style.css
/*!
Theme Name: DKUK
Theme URI: https://github.com/jclwilson/dkuk-wp-theme
Author: Jacob Charles Wilson
Author URI: https://jacobcharleswilson.com
Description: WordPress theme developed by Jacob Charles Wilson (@jclwilson) for DKUK Salon, London.
Version: 1.0
Text Domain: dkuk
*/

/* Set variables */
:root {
	/* Spacing and sizing */
	--dkuk-root-font-size:	16px;
	--dkuk-large-size:		6rem;
	--dkuk-medium-size:		2.5rem;
	--dkuk-small-size:		1.5rem;
	--dkuk-smallest-size:	1rem;

	/* Stripe variables */
	--dkuk-total-stripe: 4.8rem;
	--dkuk-thick-stripe: 4.5rem;
	--dkuk-thin-stripe: calc(var(--dkuk-total-stripe) - var(--dkuk-thick-stripe));
	--dkuk-line-height: 0.8;

	/* Colours */
	--dkuk-primary-colour: #222222;
	--dkuk-secondary-colour: #fefefe;
	--dkuk-tertiary-colour: #f6f6f6;
	--dkuk-highlight-colour: #5fff00;
}

/* Start by setting basic rules for elements */
/* Many of these are setting cosntant values or basic defaults that need to be inherited */
/* These could be set in the reset CSS, but I want to keep that vanilla and entirely within the critical css section of the header */
html {
	/* Sets root font size for rem unit */
	font-size: var(--dkuk-root-font-size);
	/* ensures border-box sizing, useful for masonry and flexboxgrid */
	box-sizing: border-box;

	padding-top: calc(var(--dkuk-total-stripe) / 3);
	/* Sets font size for body separately to the root font size - very important to note! */
	color: var(--dkuk-primary-colour);
	background:	var(--dkuk-secondary-colour);
	/* Typography */
	font-family: 'WorkSans', sans-serif;
}

/* Ensures border-box sizing */
*, *:before, *:after {
	box-sizing: inherit;
}

/* Ensure all images don't exceed boundaries*/
img {
	display:block;
	height:auto;
	width:100%;
	margin:0 auto;
}

a {
	text-decoration: none;
}

p {
	font-size: var(--dkuk-small-size);
	line-height: 1.3;
}

cite, em, strong {
	font-family: 'WorkSansBold';
	font-weight: bold;
}

/* End element rules*/

/* Below all CSS rules concern classes */

/* Header styles */

.header__container {
	margin-bottom: var(--dkuk-total-stripe);
}

.header__container>*:not(:first-child):not(:last-child) {
	margin-bottom: var(--dkuk-total-stripe);
}

.header__logo {
	height: var(--dkuk-total-stripe);
	transform: rotate(2deg) scale(1.3,1.3);
}

/* Ends Header styles */

/* Main styles */

.main__container {
	margin-left: var(--dkuk-medium-size);
	margin-right: var(--dkuk-medium-size);
	margin-bottom: var(--dkuk-total-stripe);
}

/* Classes for Element Sizing for Masonry */
/* I haven't actually managed to get element sizing to work proeprly, so these are hacky */
/* Please change if you know how */

/* 3 columns by default */
.grid__sizer,
.grid__item {
	width: 30%;
}

/* Set the width of the gutters */
.grid__gutter-sizer {
	width:5%;
}

/* End Element Sizing for Masonry */

/* Post styles */

/* Uses element to avoid a huge load of class selectors */
.article {
	background: var(--dkuk-secondary-colour);
	border: solid var(--dkuk-primary-colour) var(--dkuk-thin-stripe);
	font-size: var(--dkuk-small-size);
	line-height: 1;
}

.article__container {
	padding-top: var(--dkuk-medium-size);
	padding-bottom: var(--dkuk-medium-size);
}

.article__title, .exhibition__dates, .article__content > * {
	margin-bottom: var(--dkuk-small-size);
}

/* Typography */

/* Title font size and weight */
.large, .article__title, .article h1, .article h2, .article h3, .article h4, .article h5, .article h6 {
	font-family: 'WorkSansBold', sans-serif;
	font-size: var(--dkuk-medium-size);
	font-weight: bold;
	text-transform: uppercase;
}

.article__content a, .podcast__link, .footer__widget a {
	text-decoration: underline;
}

.article ul {
	list-style-type: disc;
	margin-left: var(--dkuk-small-size);
}

/* Post Images */
.article .alignnone {
    margin: 0 var(--dkuk-small-size) var(--dkuk-small-size) 0;
}

.article .alignright {
    float: right;
    margin: 0 0 var(--dkuk-small-size) var(--dkuk-small-size);
}

.article .alignleft {
    float: left;
    margin: 0 var(--dkuk-small-size) var(--dkuk-small-size) 0;
}

.article .aligncenter {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
/* Ends Post Image styles */

/* Post Preview styles */
/* These use flexbox to flip the title and the thumbnail */
/* This means that in the markup it goes title > thumbnail > excerpt */
/* But that visually it goes thumbnail > title > excerpt */

.article__preview {
    display: flex;
    flex-direction: column;
	margin-bottom:var(--dkuk-medium-size);
	padding-bottom:var(--dkuk-medium-size);

	/* Break words on small boxes */
	overflow-wrap: break-word;
	word-wrap: break-word;
	-webkit-hyphens: auto;
	-ms-hyphens: auto;
	-moz-hyphens: auto;
	hyphens: auto;
}

.article__preview .article__header {
	margin-top: var(--dkuk-medium-size);
}

.article__preview .article__excerpt {
	margin-top: var(--dkuk-small-size);
}

.article__preview .article__title {
	margin-bottom: 0;
}

.article__preview .thumbnail__link {
    order: -1;
}

/* Exhibition list */
.exhibition-list__item {
	width: 100%;
	margin-bottom: var(--dkuk-total-stripe);
}

.exhibition-list__title {
	font-family: 'WorkSansBold', sans-serif;
	font-size: var(--dkuk-large-size);
	font-weight: bold;
	line-height: var(--dkuk-line-height);
	text-transform: uppercase;
}

/* End Post Preview Styles */

/* Ends Post styles */

/* Component styles */

/* Menu Styles */

.menu {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	flex-direction: column;
}

/* End Menu Styles */

/* Salon ACF */

.salon {
	margin-bottom:var(--dkuk-medium-size);
}

.colours {
	margin-top:var(--dkuk-medium-size);
}

.salon__prices {
	padding-top:var(--dkuk-small-size);
	width: 100%;
	border-collapse: collapse;
}

.salon__header {
	display:none;
}

.salon__service {
	border-bottom:dashed 2px var(--dkuk-primary-colour);
	padding-top:var(--dkuk-small-size);
	width:70%;
}

.colours__smallprint {
	display: block;
	margin-top:var(--dkuk-small-size);
}

/* Ends Salon ACF */

/* Podcast ACF */
.podcast__title {
    display: none;
}

.podcast__file {
    width: 100%;
    margin-bottom: var(--dkuk-small-size);
}

.podcast__link {
	display: block;
    margin-bottom: var(--dkuk-small-size);
}
/* Ends Podcast ACF */

/* Flickity Image Gallery */

.gallery {
	margin-bottom: var(--dkuk-medium-size);
}

.gallery__list {
	background-color: var(--dkuk-tertiary-colour);
}

.flickity-slider {
  display: flex;
  align-items: center;
}

.gallery__item {
	width: 100%;
}

.gallery__caption {
	font-size: var(--dkuk-smallest-size);
	padding: var(--dkuk-smallest-size);
}
/* Ends Flickity styles */

.view-more {
	display: flex;
	justify-content: center;
}

.view-more__button {
	font-family: 'WorkSansBold', sans-serif;
	font-size: var(--dkuk-medium-size);
	font-weight: bold;
	text-transform: uppercase;
	background-color: var(--dkuk-primary-colour);
	border: none;
	color: var(--dkuk-secondary-colour);
	padding: var(--dkuk-small-size)  var(--dkuk-medium-size);
	text-align: center;
	display: inline-block;
}

/* Ends Component styles */

/* Footer styles */

.footer__container {
	background-color: var(--dkuk-primary-colour);
	color:var(--dkuk-secondary-colour);
	padding-bottom: var(--dkuk-small-size);
}

/* Footer Nav */

.footer__nav {
		margin-top: var(--dkuk-smallest-size);
}

.footer__nav .menu {
    flex-direction: row;
}

/* Footer Nav */
.footer__nav .menu-item a {
    text-decoration: underline;
}

.footer__nav .menu-item:not(:last-child) {
	margin-bottom: var(--dkuk-smallest-size);
}

/* Footer Sidebar */

.footer__widget {
	margin-top: var(--dkuk-smallest-size);
}

.footer__widget ul {
	display: flex;
	flex-direction: row;
	justify-content: space-around;
}

.footer__widget ul li a {
	font-size: var(--dkuk-medium-size);
	text-decoration: none;
}

.footer p {
	font-size:var(--dkuk-smallest-size)
}

.footer p:not(:last-child) {
	margin-bottom: var(--dkuk-smallest-size)
}

/* Ends Footer Nav Styles */

/* Ends Footer styles */

/* Media Queries */
/* My tendency is to construct media queries on content not on design. */
/* Have three different sizes given three columns */
/* The media queries use these values to match the flexbox ones, usually I'd move from narrow up to wide, not from wide down to narrow */
@media (max-width: 64em)  {
	/* Two columns on medium screens */
	.grid__sizer, .grid__item {
		width: 49%;
	}
	.grid__gutter-sizer {
		width:2%;
	}
	.footer__nav .menu-item {
    	min-width: 49%;
	}
}

@media (max-width: 48em) {
	:root {
		/* Spacing and sizing */
		--dkuk-root-font-size:	16px;
		--dkuk-large-size:		2rem;
		--dkuk-medium-size:		2rem;
		--dkuk-small-size:		1rem;

		/* Stripe variables */
		--dkuk-total-stripe: 2rem;
		--dkuk-thick-stripe: 1.8rem;
		--dkuk-thin-stripe: calc(var(--dkuk-total-stripe) - var(--dkuk-thick-stripe));
		--dkuk-line-height: 1;
	}
	.header__logo {
		top:0;
	}
	.main__container {
		margin-left: 0;
		margin-right: 0;
	}
	/* One column on narrow screens */
	.grid__sizer, .grid__item {
		width: 100%;
	}
	.grid__gutter-sizser {
		width:0%;
	}
	.footer__nav .menu-item {
		min-width: 100%;
	}
}

/* The styles below control the background stripes and the vertical alignment of elements to those stripes. */
/* These have been carefully calculated and matched */

/* The Stripes */
.stripes {
	background-origin: content-box;
    background-image: repeating-linear-gradient(
		180deg,
		var(--dkuk-primary-colour),  /* previous 2 values match type height*/
		var(--dkuk-primary-colour) var(--dkuk-thin-stripe),  /* previous 2 values match type height*/
		var(--dkuk-secondary-colour) var(--dkuk-thin-stripe),  /* previous 2 values match type height*/
		var(--dkuk-secondary-colour) var(--dkuk-total-stripe) /*add type height plys first value*/
	);
}

/* Stripes content */

.align {
	font-size: var(--dkuk-large-size);
	line-height: var(--dkuk-line-height);
}

/* Ends Stripes */

/* Accessibility styles */
/* These are at the very end to make sure they override rules above */

/* Selection, focus, and hover rules */
/* also current page! */

.menu-item:hover {
	z-index: 100;
}

.current-menu-item>*, .menu-item a:hover, .menu-item a:hover>*, .menu-item:focus, .menu-item:focus>*, .exhibition-list__link:hover, .exhibition-list__link:focus {
	background-color: var(--dkuk-primary-colour);
	color: var(--dkuk-secondary-colour);
	border:none;
	outline:none;
}

/* Selection rules MUST be kept separate, god knows why */
/* They WILL NOT WORK if combined */
/* See https://css-tricks.com/overriding-the-default-text-selection-color-with-css/ */
::selection {
	background-color: var(--dkuk-primary-colour);
	color: var(--dkuk-secondary-colour);
	border:none;
	outline:none;
}

::selection>*  {
	background-color: var(--dkuk-primary-colour);
	color: var(--dkuk-secondary-colour);
	border:none;
	outline:none;
}

/* WordPress Generated Classes */
/* Text meant only for screen readers. */
/* From the Wordpress Codex */
/* https://codex.wordpress.org/CSS */

.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	white-space: nowrap;
	height: 1px;
	width: 1px;
	overflow: hidden;
}

/* Ends accessibility styles */

/* BUG FIXES */

/* Brings background lines to edges of the screen */

.container-fluid {
	padding: 0 !important;
}

.row {
	margin-left: 0 !important;
	margin-right: 0 !important;
}

/* Ends Background Lines fix */

